# rosavto

./: .gitignore  MANIFEST.in  README.md  README.txt  development.example.ini  setup.cfg  setup.py
data/: borders_dept.dbf  borders_dept.shp  borders_dept.shx  contactor_stretches.dbf  contactor_stretches.shp  contactor_stretches.shx  m10_contactor_stretches.dbf  m10_contactor_stretches.shp  m10_contactor_stretches.shx  m10_norm_stretches.dbf  m10_norm_stretches.shp  m10_norm_stretches.shx  m10_path.dbf  m10_path.shp  m10_path.shx  m10_pk.dbf  m10_pk.shp  m10_pk.shx  m9_contactor_stretches.dbf  m9_contactor_stretches.shp  m9_norm_stretches.dbf  m9_norm_stretches.shx  m9_path.dbf  m9_path.shp  m9_path.shx  m9_pk.dbf  m9_pk.shp  norm_stretches.dbf  norm_stretches.shp  norm_stretches.shx  parts.dbf  parts.shp  parts.shx  pk.dbf  pk.sbn  pk.sbx  pk.shp  pk.shx  regions.dbf  regions.shp  (+7 more)
deploy/: backup.py  backup_jenkins.sh  build.py  crontab.data  deploy_jenkins.sh  restore_jenkins.sh  upgrade_db.sh
deploy/centos/: readme.md
doc/: replica.odt
doc/normativ/: docs_todo.odt
rosavto/: __init__.py  navigation.py
rosavto/initializedb/: __init__.py  initializedb.py  mapconfig.xml  ways_exporter.py
rosavto/model/: __init__.py  route.py  simple_road.py  utilites.py  uuid_type.py  way.py
rosavto/static/: ie6.css  pylons.css
rosavto/templates/: _js_scripts.mako  _master.mako  _navigation.mako  _sub_navigation.mako  attributes.mako  base_layers.mako  center.mako  clusters.mako  code.mako  home.mako  incident.mako  index.mako  layer.mako  layers.mako  map.mako  marker.mako  master.mako  object_selector.mako  (+9 more)
rosavto_tornado/: __init__.py  run.py
src/lineref/: CMakeLists.txt  ogrlineref.cpp
src/lineref/info/: get_distance.sql  get_distance_by_uuid.sql  get_position.sql  get_position_by_rid.sql  get_position_by_uuid.sql  get_subline_by_uuid.sql  test_get_distance.sql  test_get_distancebyuuid.sql  test_get_position.sql  test_get_subline.sql
tests/: ngwDumperTests.py  ngwServicesTests.py  rosavtoDatabaseTests.py
(+100 files in other folders)
